--- a/views/include/_show.ejs
+++ b/views/include/_show.ejs
@@ -10,7 +10,7 @@
         <a href="/update-user?id=<%= users[i]._id%>" class="btn border-shadow update">
             <span class="text-gradient"><i class="fas fa-pencil-alt"></i></span>
         </a>
-        <a class="btn border-shadow delete" data-id=<%= users[i]._id%>>
+        <a href="/" name="<%= port %>" id="delete-1943" class="btn border-shadow delete" data-id=<%= users[i]._id%> >
             <span class="text-gradient"><i class="fa-solid fa-trash"></i></span>
         </a>
     </td>
