--- a/views/update_user.ejs
+++ b/views/update_user.ejs
@@ -24,6 +24,7 @@
                     <div class="form-group">
                         <label for="name" class="text-light">Name</label>
                         <input type="hidden" class="id" name="id" value="<%= user._id %>">
+                        <input type="hidden" class="port" name="port" value="<%= port %>">
                         <input type="text" name="name" value="<%= user.name %>" placeholder="Venkata Giridhar">
                     </div>
             
@@ -69,8 +70,8 @@
                         </div>
                     </div>
             
-                    <div class="form-group">
-                        <button type="submit" class="btn text-dark update">Save</button>
+                    <div class="form-group" >
+                        <button type="submit" class="btn text-dark update" name=<%= port %>>Save</button>
                     </div>
             
                 </div>   
